// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/ActivityFeed/version/CollapsedVersion should correctly render for multiple collaborators 1`] = `
<div
  className="bcs-Version"
>
  <span
    className="bcs-Version-message"
  >
    <FormattedMessage
      defaultMessage="{numberOfCollaborators} collaborators uploaded v{versions}"
      id="be.versionMultipleUsersUploaded"
      values={
        Object {
          "numberOfCollaborators": 2,
          "versions": <span
            className="bcs-Version-range"
          >
            1
             - 
            10
          </span>,
        }
      }
    />
  </span>
</div>
`;

exports[`elements/content-sidebar/ActivityFeed/version/CollapsedVersion should correctly render for multiple collaborators 2`] = `
<span
  className="bcs-Version-range"
>
  1
   - 
  10
</span>
`;

exports[`elements/content-sidebar/ActivityFeed/version/CollapsedVersion should correctly render for single collaborator 1`] = `
<div
  className="bcs-Version"
>
  <span
    className="bcs-Version-message"
  >
    <FormattedMessage
      defaultMessage="{name} uploaded v{versions}"
      id="be.versionUploadCollapsed"
      values={
        Object {
          "name": <strong>
            Person one
          </strong>,
          "versions": <span
            className="bcs-Version-range"
          >
            1
             - 
            10
          </span>,
        }
      }
    />
  </span>
</div>
`;

exports[`elements/content-sidebar/ActivityFeed/version/CollapsedVersion should correctly render for single collaborator 2`] = `
<span
  className="bcs-Version-range"
>
  1
   - 
  10
</span>
`;
